# fsq

./: .gitignore  CMakeLists.txt  CMakeSettings.json
include/sdl_image/: SDL_image.h
shader/: simple_in_out.frag  simple_in_out.vert  simple_in_out_instanced.frag  simple_in_out_instanced.vert  simple_texture.frag  simple_texture.vert
src/: Application.cpp  Application.h  Game.cpp  Game.h  dgtm.cpp  main.cpp
src/gamelogic/: Actor.h  GameTime.h  Map.cpp  Map.h  MovementFunctions.h
src/graphics/: Batch.cpp  Batch.h  Camera.h  CleanUpSDL.h  DrawFunctions.h  GL_Headers.h  Geometry.h  Primitives.h  SceneObj.h  ScenePrimitives.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/util/: Loader.h  Math_Functions.h
